# Worm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-multi-platform.yml  release.yml
include/: food.hpp  game_manager.hpp  game_object.hpp  game_scene.hpp  home_scene.hpp  home_scene_player.hpp  moveable.hpp  new_game_scene.hpp  player.hpp  scene.hpp  scene_manager.hpp  transform2d.hpp
include/auxiliary/: colors.hpp  consts.hpp  enums.hpp  utils.hpp
include/data_management/: data_manager.hpp  data_reader_writer.hpp  game_data.hpp
include/ui/: button.hpp  text.hpp  textbox.hpp
src/: button.cpp  data_manager.cpp  data_reader_writer.cpp  food.cpp  game_data.cpp  game_manager.cpp  game_object.cpp  game_scene.cpp  home_scene.cpp  home_scene_player.cpp  main.cpp  moveable.cpp  new_game_scene.cpp  player.cpp  scene.cpp  scene_manager.cpp  text.cpp  textbox.cpp  transform2d.cpp
